--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
-  "name": "ncugit",
-  "version": "1.0.0",
-  "main": "index.js",
-  "author": "Luca <lusc.dev@gmail.com>",
-  "license": "MIT",
-  "private": true
+	"name": "ncugit",
+	"version": "1.0.0",
+	"main": "index.js",
+	"author": "Luca <lusc.dev@gmail.com>",
+	"license": "MIT",
+	"private": true,
+	"devDependencies": {
+		"prettier": "^2.7.0",
+		"xo": "^0.50.0"
+	},
+	"scripts": {
+		"fmt": "prettier -w . && xo --fix"
+	}
 }
