--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
-	"name": "ncugit",
+	"name": "@lusc/ncu-git",
 	"version": "1.0.0",
-	"main": "index.js",
+	"main": "dist/index.js",
 	"author": "Luca <lusc.dev@gmail.com>",
 	"license": "MIT",
-	"private": true,
+	"publishConfig": {
+		"access": "public"
+	},
+	"type": "module",
+	"bin": {
+		"ncu-git": "dist/index.js"
+	},
 	"devDependencies": {
 		"@lusc/tsconfig": "^1.2.2",
+		"@types/node": "^17.0.44",
+		"@types/semver": "^7.3.9",
 		"prettier": "^2.7.0",
 		"rimraf": "^3.0.2",
 		"typescript": "^4.7.3",
@@ -15,5 +23,11 @@
 	"scripts": {
 		"fmt": "prettier -w . && xo --fix",
 		"build": "rimraf dist && tsc"
+	},
+	"dependencies": {
+		"execa": "^6.1.0",
+		"meow": "^10.1.2",
+		"npm-check-updates": "^13.1.5",
+		"semver": "^7.3.7"
 	}
 }
