--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,8 @@
 {
 	"compilerOptions": {
 		"outDir": "dist",
-		"rootDir": "src",
 		"moduleResolution": "NodeNext"
 	},
 	"extends": "@lusc/tsconfig",
-	"include": ["src/*"]
+	"include": ["src/*", "test/*"]
 }
