--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@lusc/ncu-git",
 	"version": "1.0.0",
-	"main": "dist/index.js",
+	"main": "dist/src/index.js",
 	"author": "Luca <lusc.dev@gmail.com>",
 	"license": "MIT",
 	"publishConfig": {
@@ -9,12 +9,14 @@
 	},
 	"type": "module",
 	"bin": {
-		"ncu-git": "dist/index.js"
+		"ncu-git": "dist/src/index.js"
 	},
 	"devDependencies": {
+		"@ava/typescript": "^3.0.1",
 		"@lusc/tsconfig": "^1.2.2",
 		"@types/node": "^17.0.44",
 		"@types/semver": "^7.3.9",
+		"ava": "^4.3.0",
 		"prettier": "^2.7.0",
 		"rimraf": "^3.0.2",
 		"typescript": "^4.7.3",
@@ -22,12 +24,27 @@
 	},
 	"scripts": {
 		"fmt": "prettier -w . && xo --fix",
-		"build": "rimraf dist && tsc"
+		"build": "rimraf dist && tsc",
+		"test": "yarn build && ava -T 30s"
 	},
+	"files": [
+		"dist/src/"
+	],
 	"dependencies": {
 		"execa": "^6.1.0",
 		"meow": "^10.1.2",
 		"npm-check-updates": "^13.1.5",
 		"semver": "^7.3.7"
+	},
+	"ava": {
+		"typescript": {
+			"compile": false,
+			"rewritePaths": {
+				"test/": "dist/test/"
+			}
+		},
+		"files": [
+			"test/*.test.ts"
+		]
 	}
 }
