--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,13 @@
 	"bracketSpacing": false,
 	"singleQuote": true,
 	"trailingComma": "all",
-	"useTabs": true
+	"useTabs": true,
+	"overrides": [
+		{
+			"files": "*.md",
+			"options": {
+				"useTabs": false
+			}
+		}
+	]
 }
