--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,4 +31,4 @@ jobs:
           git --no-pager diff --exit-code
 
       - name: CI tests
-        run: yarn run test
+        run: yarn run test -m "Multiple dependencies"
