--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,5 +25,10 @@ jobs:
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
+      - name: Check code style
+        run: |
+          yarn run fmt
+          git --no-pager diff --exit-code
+
       - name: CI tests
-        run: yarn run test -m "Multiple dependencies"
+        run: yarn run test
