--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
 	"devDependencies": {
 		"@ava/typescript": "^3.0.1",
 		"@lusc/tsconfig": "^1.2.2",
+		"@types/debug": "^4.1.7",
 		"@types/node": "^18.0.0",
 		"@types/semver": "^7.3.10",
 		"ava": "^4.3.0",
+		"debug": "^4.3.4",
 		"prettier": "^2.7.0",
 		"rimraf": "^3.0.2",
 		"typescript": "^4.7.3",
@@ -25,7 +27,7 @@
 	"scripts": {
 		"fmt": "prettier -w . && xo --fix",
 		"build": "rimraf dist && tsc",
-		"test": "yarn build && ava -T 30s"
+		"test": "yarn build && ava -sT 30s"
 	},
 	"files": [
 		"dist/src/"
