Create PackageManager to pass around

--- a/.xo-config.json
+++ b/.xo-config.json
@@ -3,6 +3,7 @@
 		"@typescript-eslint/explicit-function-return-type": "error",
 		"@typescript-eslint/indent": "off",
 		"no-await-in-loop": "off",
-		"prefer-template": "error"
+		"prefer-template": "error",
+		"no-mixed-spaces-and-tabs": "off"
 	}
 }
