--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"execa": "^6.1.0",
 		"meow": "^10.1.3",
 		"npm-check-updates": "^15.3.3",
+		"picocolors": "^1.0.0",
 		"semver": "^7.3.7"
 	},
 	"ava": {
