--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
 	"compilerOptions": {
-		"outDir": "dist",
-		"moduleResolution": "NodeNext"
+		"outDir": "dist"
 	},
 	"extends": "@lusc/tsconfig",
 	"include": ["src/*", "test/*"]
