--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        node: [16, 18]
+        node: [16, 18, 19]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
