--- a/.xo-config.json
+++ b/.xo-config.json
@@ -4,6 +4,13 @@
 		"@typescript-eslint/indent": "off",
 		"no-await-in-loop": "off",
 		"prefer-template": "error",
-		"no-mixed-spaces-and-tabs": "off"
+		"no-mixed-spaces-and-tabs": "off",
+		"import/order": [
+			"error",
+			{
+				"newlines-between": "always",
+				"warnOnUnassignedImports": true
+			}
+		]
 	}
 }
