--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,12 +12,16 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        node: [16, 18, 19]
+        node-version:
+          - ^16.9
+          - 18
+          - 20
+    name: Node ${{ matrix.node-version }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Use Node.js ${{ matrix.node }}
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
